@@ -2,13 +2,14 @@ package org.example.froggergame;
 
 import javafx.scene.image.ImageView;
 import javafx.scene.input.InputEvent;
+import javafx.scene.input.KeyEvent;
 
 import java.util.ArrayList;
 
 
 public abstract class Actor extends ImageView{
 
-    public void move(double dx, double dy) {
+    public void move(double dx, double dy) {                    // move function that sets x and y coordinates of Actor
         setX(getX() + dx);
         setY(getY() + dy);
     }
@@ -30,14 +31,16 @@ public abstract class Actor extends ImageView{
         for (A actor: getWorld().getObjects(cls)) {
             if (actor != this && actor.intersects(this.getBoundsInLocal())) {
                 someArray.add(actor);
-            }
+            } // literally checking whether object collides another with .geometry functions
         }
         return someArray;
+        // returns an array that represents two items that have collided
     }
     
-    public void manageInput(InputEvent e) {
-        
-    }
+//    public void manageInput(KeyEvent event) {
+//        // TODO: Need to override in Animal class to handle Frogger input
+//        // TODO: multiplayer?
+//    }
 
     public <A extends Actor> A getOneIntersectingObject(java.lang.Class<A> cls) {
         ArrayList<A> someArray = new ArrayList<A>();
@@ -47,8 +50,10 @@ public abstract class Actor extends ImageView{
                 break;
             }
         }
-        return someArray.get(0);
-    }
+        return someArray.getFirst();
+    } // TODO: find out when you would need to access the item that has collided, perhaps with the animals and cars?
+
+//    public abstract void manageInput(KeyEvent event);
 
     public abstract void act(long now);
 
